--- a/index1.css
+++ b/index1.css
@@ -34,6 +34,9 @@ nav > span {
 
 main {
   padding: 50px 30px;
+  background-image: url(./src/assets/react-logo-half.png);
+  background-repeat: no-repeat;
+  background-position: right 75%;
 }
 
 main > h1 {
@@ -49,4 +52,9 @@ main > h1 {
 .facts-list > li {
   padding-block: 10px;
   line-height: 19px;
+}
+
+.facts-list > li::marker {
+    color: #61daFB;
+    font-size: 1.5rem
 }
