--- a/src/Tenzies/index.css
+++ b/src/Tenzies/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: Inter, sans-serif;
+  font-family: Karla, sans-serif;
   background-color: #0b2434;
   padding: 20px;
   height: 100vh;
@@ -27,7 +27,7 @@ main {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -37,6 +37,11 @@ main {
   gap: 20px
 }
 
+button {
+  font-family: Karla, sans-serif;
+  cursor: pointer;
+}
+
 .dice-container button {
   height: 50px;
   width: 50px;
@@ -44,8 +49,17 @@ main {
   border-radius: 10px;
   border: none;
   background-color: white;
-  font-family: Inter, sans-serif;
+  font-family: Karla, sans-serif;
   font-size: 1.75rem;
   font-weight: bold;
-  cursor: pointer;
+}
+
+button.roll-dice {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035FF;
+  color: white;
+  font-size: 1.2rem;
 }
