--- a/src/AssemblyEndgame/index.css
+++ b/src/AssemblyEndgame/index.css
@@ -3,14 +3,14 @@
 }
 
 body {
-    margin: 0;
-    font-family: "Hanken Grotesk", Arial, sans-serif;
-    background-color: #262626;
-    color: #D9D9D9;
-    padding: 20px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
+  margin: 0;
+  font-family: "Hanken Grotesk", Arial, sans-serif;
+  background-color: #262626;
+  color: #D9D9D9;
+  padding: 20px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 
 header {
@@ -27,4 +27,36 @@ header > p {
   font-size: 0.875rem;
   max-width: 350px;
   color: #8e8e8e;
+}
+
+section.game-status {
+  background-color: #10a95b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #f9f4da;
+  border-radius: 8px;
+  margin-block: 30px;
+}
+
+section.game-status > p {
+  margin: 5px;
+}
+
+section.game-status > h2 {
+  font-size: 1.25rem;
+  margin: 5px;
+}
+
+section.language-chips {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  justify-content: center;
+  max-width: 350px;
+}
+
+span.chip {
+  border-radius: 3px;
+  padding: 4.5px;
 }
