--- a/src/AssemblyEndgame/index.css
+++ b/src/AssemblyEndgame/index.css
@@ -54,9 +54,45 @@ section.language-chips {
   gap: 5px;
   justify-content: center;
   max-width: 350px;
+  margin-bottom: 36px;
 }
 
 span.chip {
   border-radius: 3px;
   padding: 4.5px;
+}
+
+section.word {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+  margin-bottom: 20px;
+}
+
+section.word > span {
+  height: 40px;
+  width: 40px;
+  background-color: #323232;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.125rem;
+  border-bottom: 1px solid #f9f4d4 ;
+}
+
+section.keyboard {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
+  max-width: 450px;
+}
+
+section.keyboard > button {
+  height: 35px;
+  width: 35px;
+  background-color: #fcba29;
+  border: 1px solid #d7d7d7;
+  border-radius: 3px;
+  cursor: pointer;
 }
