--- a/src/AssemblyEndgame/index.css
+++ b/src/AssemblyEndgame/index.css
@@ -86,6 +86,7 @@ section.keyboard {
   gap: 8px;
   justify-content: center;
   max-width: 450px;
+  margin-bottom: 36px;
 }
 
 section.keyboard > button {
@@ -94,5 +95,17 @@ section.keyboard > button {
   background-color: #fcba29;
   border: 1px solid #d7d7d7;
   border-radius: 3px;
+  cursor: pointer;
+}
+
+button.new-game {
+  background-color: #11B5E5;
+  border: 1px solid #D7D7D7;
+  border-radius: 4px;
+  width: 225px;
+  height: 40px;
+  padding: 6px 12px;
+  display: block;
+  margin-inline: auto;
   cursor: pointer;
 }
