--- a/src/AssemblyEndgame/index.css
+++ b/src/AssemblyEndgame/index.css
@@ -31,17 +31,36 @@ header > p {
 }
 
 section.game-status {
-  background-color: #10a95b;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   color: #f9f4da;
+  min-height: 60px;
   border-radius: 8px;
   margin-block: 30px;
 }
 
+section.game-status.won {
+  background-color: #10a95b;
+}
+
+section.game-status.lose {
+  background-color: #ba2a2a;
+}
+
+section.game-status.farewell {
+  background-color: #7a5ea7;
+  border: 1px dashed #323232;
+}
+
 section.game-status > p {
   margin: 5px;
+}
+
+section.game-status > p.farewell-message {
+  font-style: italic;
+  font-weight: 400;
 }
 
 section.game-status > h2 {
