--- a/src/AssemblyEndgame/index.css
+++ b/src/AssemblyEndgame/index.css
@@ -141,6 +141,11 @@ section.keyboard > button.wrong {
   background-color: #ec5d49;
 }
 
+section.keyboard > button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 button.new-game {
   background-color: #11B5E5;
   border: 1px solid #D7D7D7;
